# xmobar-solomon

./: .gitignore  cabal.project  default.nix  flake.nix  release.nix  shell.nix  xmobar-solomon.cabal
app/: Main.hs
nix/: sources.json
src/: App.hs
src/App/: Acpi.hs  DunstStatus.hs  Icons.hs
