cabal-version:      2.4
name:               xmobar-solomon
version:            0.1.0.0
synopsis:
homepage:
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
category:           System
extra-source-files: CHANGELOG.md

executable xmobar-solomon
  main-is:          Main.hs
  build-depends:    base ^>=4.14.1.0
                  , font-awesome-type
                  , xmobar
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts
